@@ -21,12 +21,16 @@ class LINEAR_ENVELOPE : public CONTROLLER_SOURCE {
   std::string name(void) const { return("Linear envelope"); }
 
   virtual void init(void);
-  virtual parameter_t value(void);
+  virtual parameter_t value(double pos_secs);
   virtual void set_initial_value(parameter_t arg) {}
 
   std::string parameter_names(void) const { return("length-sec"); }
   void set_parameter(int param, parameter_t value);
   parameter_t get_parameter(int param) const;
+
+private:
+  
+  parameter_t stages_len_rep;
 };
 
 #endif
