@@ -27,27 +27,23 @@
 #include "two-stage-linear-envelope.h"
 #include "eca-logger.h"
 
-CONTROLLER_SOURCE::parameter_t TWO_STAGE_LINEAR_ENVELOPE::value(void)
+CONTROLLER_SOURCE::parameter_t TWO_STAGE_LINEAR_ENVELOPE::value(double pos_secs)
 {
-  parameter_t curpos = position_in_seconds_exact();
+  parameter_t stages_len = 
+    first_stage_length_rep + 
+    second_stage_length_rep;
   parameter_t retval;
 
-  /* note: length_in_seconds_exact() depends only on
-   *       envelope parameters and equals to envelope
-   *       length (position may go beyond length() */
+  /* note: position may go beyond stages_len_rep */
   
   /* phase: hold start value */
-  if (curpos < first_stage_length_rep) {
+  if (pos_secs < first_stage_length_rep) {
     retval = 0.0f;
   }
   /* phase: linear fade */ 
-  else if (curpos < length_in_seconds_exact()) {
-    /* note: length_in_seconds_exact() is 
-     *       cached value of 
-     *       first_state_length_rep+second_state_length_rep
-     */
+  else if (pos_secs < stages_len) {
     DBC_CHECK(second_stage_length_rep > 0);
-    retval = ((curpos - first_stage_length_rep) /
+    retval = ((pos_secs - first_stage_length_rep) /
 	      second_stage_length_rep);
   }
   /* phase: hold end value */
@@ -61,17 +57,16 @@ TWO_STAGE_LINEAR_ENVELOPE::TWO_STAGE_LINEAR_ENVELOPE(void)
 {
   first_stage_length_rep = 0;
   second_stage_length_rep = 0;
-  set_parameter(1, get_parameter(1));
-  set_parameter(2, get_parameter(2));
 } 
 
 void TWO_STAGE_LINEAR_ENVELOPE::init(void)
 {
   MESSAGE_ITEM otemp;
-  otemp << "Envelope initialized: ";
+  otemp << "Two-stage envelope initialized: ";
   otemp.setprecision(3);
-  otemp << "1. " << get_parameter(1);
-  otemp << ", 2. " << get_parameter(2);
+  otemp << "1. initial hold " << get_parameter(1)
+	<< "secs, 2. linear ramp len " << get_parameter(2)
+	<< "secs.";
   ECA_LOG_MSG(ECA_LOGGER::user_objects, otemp.to_string());
 }
 
@@ -81,13 +76,11 @@ void TWO_STAGE_LINEAR_ENVELOPE::set_parameter(int param, CONTROLLER_SOURCE::para
   case 1:
     {
       first_stage_length_rep = value;
-      set_length_in_seconds(first_stage_length_rep + second_stage_length_rep);
       break;
     }
   case 2:
     {
       second_stage_length_rep = value;
-      set_length_in_seconds(first_stage_length_rep + second_stage_length_rep);
       break;
     }
   }
